--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 ﻿/* Navbar ====================================== */
 @import url(materialize.css);
 .navbar {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
@@ -17,13 +17,17 @@
   z-index: 12;
   width: 100%; }
   .navbar .navbar-brand {
+    font-weight: 700;
+    font-family: 'Raleway';
+    font-size: 30px;
     white-space: nowrap;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
-    overflow: hidden; }
-  .navbar .navbar-custom-right-menu {
-    float: right; }
+    overflow: hidden;
+  }
+  .navbar .navbar-brand span {font-weight: 300;}
+  .navbar .navbar-custom-right-menu { float: right; }
   .navbar .navbar-toggle {
     text-decoration: none;
     color: #fff;
@@ -2356,7 +2360,7 @@ body {
   -o-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  font-family: 'Roboto', Arial, Tahoma, sans-serif; }
+  font-family: 'Lato', Arial, Tahoma, sans-serif; }
 
 h1,
 h2,
@@ -6331,7 +6335,7 @@ fieldset[disabled] .form-control {
 
 /* Navbars ===================================== */
 .navbar {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
@@ -7165,7 +7169,7 @@ fieldset[disabled] .form-control {
   -o-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   background: #fdfdfd;
   width: 300px;
   overflow: hidden;
@@ -7205,12 +7209,12 @@ fieldset[disabled] .form-control {
       margin-top: 5px;
       font-size: 13px; }
   .sidebar .user-info {
-    padding: 13px 15px 12px 15px;
+    padding: 0 15px;
     white-space: nowrap;
     position: relative;
     border-bottom: 1px solid #e9e9e9;
     background: url("../images/user-img-background.jpg") no-repeat no-repeat;
-    height: 135px; }
+    height: 90px; }
     .sidebar .user-info .image {
       margin-right: 12px;
       display: inline-block; }
@@ -7713,4 +7717,3 @@ html.ie11 .dropdown-menu ul.menu li a {
 
 html.ie11 .bs-searchbox .form-control {
   width: 90%; }
-
